--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -78,18 +78,10 @@
     border-bottom: 1px solid color-border
     padding: 10px 0
   blockquote
-    font-family: font-serif
-    font-size: 1.4em
-    margin: line-height 20px
-    text-align: center
-    footer
-      font-size: font-size
-      margin: line-height 0
-      font-family: font-sans
-      cite
-        &:before
-          content: "—"
-          padding: 0 0.5em
+    font-family: font-sans
+    border-left: 5px solid #DDD
+    margin: 15px 0 0 2px
+    padding-left: 20px
   .pullquote
     text-align: left
     width: 45%
